[package]
name = "bsgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
rayon = "1.7.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
num-traits = "0.2.14"
num-integer = "0.1.45"
num-rational = "0.4.1"
secp256k1 = "0.27.0"
num_cpus = "1.16.0"
